--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,6 +10,7 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
+//$toolbar-background: transparent;
 
 
 
