--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,8 +23,8 @@
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #00688B,
+  secondary:  #337147,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
