--- a/src/pages/venue-details/venue-details.scss
+++ b/src/pages/venue-details/venue-details.scss
@@ -1,11 +1,13 @@
 venue-details-page {
-
   div.selection {
     font-size: 22px;
     display: block;
     text-align: center;
     padding-top: 5%;
   }
-
+  .item, .item-inner {
+    background-color: transparent;
+    border-bottom: none !important;
+    border-top: none !important;
+  }
 }
-
