--- a/src/pages/artist/artist.scss
+++ b/src/pages/artist/artist.scss
@@ -1,8 +1,4 @@
-page-artist {}
+page-artist {
 
-.toast-success {
-  >div {
-    background-color: #337147!important;
-  }
-  text-align: center;
 }
+
