FSq attribution styling; "choose later" tip option

--- a/src/pages/venue-details/venue-details.scss
+++ b/src/pages/venue-details/venue-details.scss
@@ -1,5 +1,11 @@
 venue-details-page {
-  .item, .item-inner {
+  .item,
+  .item-inner {
+    background-color: transparent;
+    border-bottom: none !important;
+    border-top: none !important;
+  }
+  div.toolbar-background {
     background-color: transparent;
     border-bottom: none !important;
     border-top: none !important;
