--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,7 +13,7 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .valError {
-  color: red;
+  color: #f53d3d;
   margin-left: 5%;
   font-weight: bold;
 }
@@ -34,4 +34,12 @@
 .toast-neutral {
   text-align: center;
   font-weight: bold;
+}
+
+.toast-danger {
+  text-align: center;
+  font-weight: bold;
+    >div {
+    background-color: #f53d3d!important;
+  }
 }
