Clear input buttons on artist page

--- a/src/pages/artist/artist.scss
+++ b/src/pages/artist/artist.scss
@@ -1,5 +1,5 @@
 page-artist {
-  .label {
-    //font-size: 1.3rem !important;
+  button.text-input-clear-icon {
+    background-color: transparent;
   }
 }
